Cambios Foro y Secciones
Cambios de Front y Back Foro y Secciones

--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -10,7 +10,7 @@
       <li><a href="audiovideo">Audio y video</a></li>
       <li><a href="aplicacion">Aplicaciones y Entornos virtuales</a></li>
       <li><a href="programacion">Programacion</a></li>
-      <li *ngIf="user$ | async as user;"><a  href="foro">foro Multimedia</a></li>
+      <li *ngIf="user$ | async as user;"><a  href="foro">Foro Multimedia</a></li>
     </ul>
   </div>
 
