--- a/src/app/secciones/programacion/programacion.component.html
+++ b/src/app/secciones/programacion/programacion.component.html
@@ -6,7 +6,7 @@
     </div>
     <div class="botones">
       <ul >
-        <li *ngIf="user$ | async as user;"><button  type="button" class="btn btn-primary mt-3 btn-redo" data-toggle="modal" data-target="#myModal">Editar</button></li>
+        <li *ngIf="validar"><button  type="button" class="btn btn-primary mt-3 btn-redo" data-toggle="modal" data-target="#myModal">Editar</button></li>
 
         <div class="modal fade" id="myModal">
           <div class="modal-dialog">
@@ -48,7 +48,7 @@
           </div>
         </div>
 
-        <li *ngIf="user$ | async as user;"><button  type="button" class="btn btn-primary mt-3 btn-redo" data-toggle="modal" data-target="#myModal2">Agregar</button></li>
+        <li *ngIf="validar"><button  type="button" class="btn btn-primary mt-3 btn-redo" data-toggle="modal" data-target="#myModal2">Agregar</button></li>
 
         <div class="modal fade" id="myModal2">
           <div class="modal-dialog">
@@ -97,7 +97,7 @@
           </div>
         </div>
 
-        <li *ngIf="user$ | async as user;"> <button  type="button" class="btn btn-primary mt-3 btn-redo" data-toggle="modal" data-target="#myModal3">Eliminar</button></li>
+        <li *ngIf="validar"> <button  type="button" class="btn btn-primary mt-3 btn-redo" data-toggle="modal" data-target="#myModal3">Eliminar</button></li>
 
         <div class="modal fade" id="myModal3">
           <div class="modal-dialog">
