--- a/src/app/secciones/foro/usuarios/usuarios.component.html
+++ b/src/app/secciones/foro/usuarios/usuarios.component.html
@@ -19,42 +19,35 @@
                     <table class="table col-10">
                         <thead>
                           <tr>
-                            <th scope="col">#</th>
-                            <th scope="col">First</th>
-                            <th scope="col">Last</th>
-                            <th scope="col">Handle</th>
+                          <th scope="col">#</th>
+                            <th scope="col">Nombre Usuario</th>
+                            <th scope="col">Numero de Reportes</th>
                             <th scope="col">Bloquear</th>
                             <th scope="col"> Eliminar</th>
                           </tr>
                         </thead>
                         <tbody>
-                          <tr>
+                          <tr  *ngFor= "let item of usuario$ | async">
                             <th scope="row">1</th>
-                            <td>Mark</td>
-                            <td>Otto</td>
-                            <td>@mdo</td>
-                            <td>  <button  class="btn btn-primary btn-sm btn-redo"> Bloquear </button> </td>
+                            <td>{{item.nombreusuario}} </td>
+                            <td>{{item.N_report}}</td>
+                            <td>  <button  class="btn btn-primary btn-sm btn-redo"> Bloquear</button> </td>
                             <td>  <button  class="btn btn-primary btn-sm btn-redo"> Eliminar </button> </td>
                           </tr>
-                          <tr>
-                            <th scope="row">2</th>
-                            <td>Jacob</td>
-                            <td>Thornton</td>
-                            <td>@fat</td>
-                            <td>  <button  class="btn btn-primary btn-sm btn-redo"> Bloquear </button> </td>
-                            <td>  <button  class="btn btn-primary btn-sm btn-redo"> Eliminar </button> </td>
-                          </tr>
-                          <tr>
-                            <th scope="row">3</th>
-                            <td>Larry</td>
-                            <td>the Bird</td>
-                            <td>@twitter</td>
-                            <td>  <button  class="btn btn-primary btn-sm btn-redo"> Bloquear </button> </td>
-                            <td>  <button  class="btn btn-primary btn-sm btn-redo"> Eliminar </button> </td>
-                          </tr>
-                          
+                      
                         </tbody>
                     </table>
+
+                    <script>
+                      var tables = document.getElementsByTagName('table');
+                      var table = tables[tables.length - 1];
+                      var rows = table.rows;
+                      for(var i = 0, td; i < rows.length; i++){
+                          td = document.createElement('td');
+                          td.appendChild(document.createTextNode(i + 1));
+                          rows[i].insertBefore(td, rows[i].firstChild);
+                      }
+                  </script>
 
                    
             
