--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,4 +1,8 @@
-<div class="container">   
+
+<img id="precarga" src="../../assets/logocarga2.gif" alt="">
+
+<div class="container">  
+  
   <div class="row justify-content-center" >
     <div class="col-sm-4">
       <a href="animacion">
@@ -60,4 +64,6 @@
     </div>
   </div>
 </div>
+
+
 
