--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -7,6 +7,18 @@
   outline: none;
 }
 
+#precarga{
+  display: block;
+  position: fixed;
+  top: 10%;
+  left: 32%;
+}
+
+.container{
+  opacity: 0;
+  transition: 15s;
+}
+
 footer{
   width: 100%;
   position: fixed;
